A bit more cleanup of imports
Signed-off-by: currantw <taylor.curran@improving.com>